[skip ci] Fix collapse icon path style

--- a/app/assets/stylesheets/pages/diff.scss
+++ b/app/assets/stylesheets/pages/diff.scss
@@ -553,7 +553,7 @@
   }
 
   .collapse-icon,
-  .path {
+  path {
     fill: $white-light;
   }
 
